[package]
name = "least"
description = "A simple terminal pager"
version = "0.1.0"
authors = ["classabbyamp <dev@kb6.ee>", "0x5c <dev@0x5c.io>"]
edition = "2018"

repository = "https://github.com/miaowware/least"
license = "BSD-3-Clause"
keywords = ["terminal", "pager"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
