[package]
name = "least"
description = "A simple terminal pager"
version = "0.2.0"
authors = ["classabbyamp <dev+least@placeviolette.net>", "0x5c <dev@0x5c.io>"]
edition = "2021"

repository = "https://github.com/miaowware/least"
license = "BSD-3-Clause"
keywords = ["terminal", "pager"]
categories = ["command-line-utilities"]

exclude = [
    "/.github/",
    "/.gitignore",
]

[dependencies]
anyhow = "1.0.43"
clap = {version="3.1.18", features=["derive"]}
crossterm = "0.23.2"
